# dealii-multigrid

./: .gitmodules  CMakeLists.txt  README.md  cell_weights.h  memory_consumption.cc  mg_tools.h  multigrid_throughput.cc  multigrid_throughput_params.cc  transfer_operators.cc
experiments-skx/: README.MD  large-scaling-create-job-files.py  parameters-0768.cmd  parameters-24576.cmd  small-scaling-annulus-0001.cmd  small-scaling-annulus-0192.cmd  small-scaling-quadrant-0001.cmd  small-scaling-quadrant-0192.cmd
include/: cell_weights.h  grid_generator.h  mg_tools.h  operator.h  scoped_timer.h
input_files/: input_0015.json
mantle-convection/: README.md
meshes/fichera/: README.md  fichera_0.inp  fichera_1.inp  fichera_2.inp  fichera_3.inp
meshes/knuckle/: knuckle.cub  knuckle_0.inp  knuckle_1.inp  knuckle_2.inp
meshes/l_shape/: l_shape_0.msh  l_shape_1.msh  l_shape_2.msh  l_shape_3.msh  l_shape_5.msh  level_4.msh
meshes/piston/: piston_0.inp  piston_1.inp  piston_2.inp  piston_3.inp
meshes/wrench/: wrench_0.inp  wrench_1.inp
meshes/wrench_tetrahedral/: wrench_tetrahedral_0.msh  wrench_tetrahedral_1.msh  wrench_tetrahedral_2.msh  wrench_tetrahedral_3.msh
scripts/: default.json  large_scaling.py  large_scaling_hp.py  large_scaling_partitioning.py  parameters_hp_amg.py  parameters_mgnumber.py  parameters_smoother_degree.json  parameters_smoother_degree.py  parameters_tolerance.py  parameters_weights.py  small-scaling-gaussian.py  small-scaling-gc-default.json  small-scaling-gc-default.py  small-scaling-gc-fcp.json  small-scaling-gc-fcp.py  small-scaling-hypercube.json  small-scaling-hypercube.py  small-scaling.json  small-scaling.py
